--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -425,10 +425,15 @@ h2.headline {
 /* Form */
 
 #search input.field {
-	width: 100%;
-	height: 36px;
-	size: 16px;
-	padding-left: 10px;
+	width: 270px;
+	height: 34px;
+	font-size: 13px;
+	font-weight: 400;
+	padding-left: 12px;
+	border: 2px solid #eee;
+	margin-top: 40px;
+	border-radius: 17px;
+	-webkit-appearance: none;
 }
 
 /* Media Queries */
