Loads of polish to css

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
   </section>
 </article>
 
-<footer id="post-meta" class="clearfix">
+<section id="post-meta" class="clearfix">
   <a href="/">
     <img class="u-photo avatar" src="{{ "/" | relative_url  }}assets/images/avatar.svg">
     <div>
@@ -24,4 +24,4 @@ layout: default
       <span>{{ site.description }}</span>
     </div>
   </a>
-</footer>
+</section>
