--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,13 +1,11 @@
 <div class="profile">
-    <section id="wrapper">
-        <header class="h-card">
-
-        <a class="u-url" href="{{ "/" | relative_url  }}">
-            <img id="avatar" src="{{ "/" | relative_url  }}assets/images/avatar.svg"/>
-        </a>
-
-            <h1 class="p-name" rel="me">{{ site.author }}</h1>
-            <h4 class="p-role">{{ site.description }}</h4>
-        </header>
-    </section>
+  <section id="wrapper">
+    <header class="h-card">
+      <a class="u-url" href="{{ "/" | relative_url  }}about">
+        <img id="avatar" src="{{ "/" | relative_url  }}assets/images/avatar.svg"/>
+      </a>
+      <h1 class="p-name" rel="me">{{ site.author }}</h1>
+      <h4 class="p-role">{{ site.description }}</h4>
+    </header>
+  </section>
 </div>
