.post-body li spacing and mobile h4 tweaks

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 
 /* Spacing */
-.highlight, .post h1, h2, h3, h4, h5, h6, p, .post-body ul, pre ::before {
+.highlight, .post h1, h2, h3, h4, h5, h6, p, .post-body ul, .post-body li, .bio li, pre ::before {
 	margin-top: 1em;
 }
 
@@ -482,7 +482,7 @@ h2.headline {
 	}
 
 	h4 {
-		font-size: 15px;
+		font-size: 17px;
 	}
 
 	h5 {
