--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -2,19 +2,23 @@
   {% for post in paginator.posts %}
   <li>
     <article>
-      <a href="{{ site.baseurl }}/{{ post.url | remove_first: '/' }}" class="u-url"><aside class="dates"><time datetime="{{ post.date }}" class="dt-published">→ {{ post.date | date:"%-I:%M %p, %b %-d" }}</time></aside></a>
       {% if post.title == "" %}
       <section class="post-body">
         {{ post.content }}
       </section>
       {% else %}
       <header>
-        <h1><a href="{{ site.baseurl }}/{{ post.url | remove_first: '/' }}">{{ post.title }}</a></h1>
+        <h2><a href="{{ site.baseurl }}/{{ post.url | remove_first: '/' }}">{{ post.title }}</a></h2>
       </header>
       <section class="post-body">
         {{ post.content }}
       </section>
       {% endif %}
+      <a href="{{ site.baseurl }}/{{ post.url | remove_first: '/' }}" class="u-url">
+        <aside class="dates">
+          <time datetime="{{ post.date }}" class="dt-published">→ {{ post.date | date:"%-I:%M %p, %b %-d" }}</time>
+        </aside>
+      </a>
     </article>
   </li>
   <span class="separator"><span class="divider"></span></span>
