Updates to support Micro.blog.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <li><a href="/feed.xml">RSS</a></li>
     <li><a href="/feed.json">JSON Feed</a></li>
     <li><a href="https://micro.blog/{{ site.microblog_user }}" rel="me">Micro.blog</a></li>
-    <li><a class="u-email" href="mailto:{{ site.email }}" rel="me">Email</a></li>
+<!--     <li><a class="u-email" href="mailto:{{ site.email }}" rel="me">Email</a></li> -->
   </ul>
   <form method="get" id="search" action="https://duckduckgo.com/">
     <input type="hidden" name="sites" value="{{ site.url }}"/>
