--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,8 +2,13 @@
   {% if page.url != "/" %}
   <a class="normal" href="{{ "/" | relative_url  }}"> <span class="arrow">←</span> Home</a>
   {% endif %}
-  {% if page.url != "/about/" %}
-  <a href="{{ "/" | relative_url  }}about">About</a>
-  {% endif %}
+
+	{% assign sorted_pages = site.pages | sort: "order" %}
+	{% for page in sorted_pages %}
+		{% if page.title %}
+			<a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+		{% endif %}
+	{% endfor %}
+
   <a class="cta" href="https://micro.blog/{{ site.microblog_user }}" rel="me">Also on Micro.blog</a>
 </nav>
