--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta content="{{ site.author }}" name="author">
-  <meta content="{{ site.description }}" name="description">
   {% if page.url == "/" %}
   <title>{{ site.title }}</title>
   {% elsif paginator %}
@@ -14,12 +13,30 @@
   <title>{{ site.title }} {% assign exist_or_not = page.title | size %} {% if exist_or_not < 1 %} - Status {% else %} - {{ page.title }} {% endif %}</title>
   {% endif %}
   <link href="{{ "/" | relative_url  }}assets/css/style.css" rel="stylesheet">
-  <link href="{{ "/" | relative_url  }}assets/css/highlight.css"rel="stylesheet">
-  <link href="{{ "/" | relative_url  }}assets/images/fav32.png" sizes="32x32" rel="icon">
-  <link href="{{ "/" | relative_url  }}assets/images/fav192.png" sizes="192x192" rel="icon">
-  <link href="{{ "/" | relative_url  }}assets/images/apple-touch-icon-precomposed.png" rel="apple-touch-icon-precomposed">
-  <link href="{{ "/" | relative_url  }}feed.json" title="{{ site.title }}" type="application/json" rel="alternate">
-  <link href="{{ "/" | relative_url  }}feed.xml" title="{{ site.title }}" type="application/rss+xml" rel="alternate">
+  <link href="{{ "/" | relative_url  }}assets/css/highlight.css" rel="stylesheet">
+  <link rel="stylesheet" href="{{ site.baseurl }}/custom.css">
+
+	<link rel="shortcut icon" href="https://micro.blog/{{ site.username }}/favicon.png" type="image/x-icon" />
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+  <link rel="alternate" type="application/json" title="{{ site.title }}" href="{{ "/feed.json" | prepend: site.baseurl | prepend: site.url }}" />
+  <link rel="EditURI" type="application/rsd+xml" href="{{ site.baseurl }}/rsd.xml" />
+
+  <link rel="me" href="https://micro.blog/{{ site.username }}" />
+  {% if site.twitter_username != "" %}
+  	<link rel="me" href="https://twitter.com/{{ site.twitter_username }}" />
+  {% endif %}
+  {% if site.github_username != "" %}
+  	<link rel="me" href="https://github.com/{{ site.github_username }}" />
+  {% endif %}
+  {% if site.instagram_username != "" %}
+  	<link rel="me" href="https://instagram.com/{{ site.instagram_username }}" />
+  {% endif %}
+  <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
+  <link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
+  <link rel="micropub" href="https://micro.blog/micropub" />
+  <link rel="webmention" href="https://micro.blog/webmention" />
+  <link rel="subscribe" href="https://micro.blog/users/follow" />
+
 </head>
 <body>
   {% include navigation.html %}
