--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,12 +1,14 @@
+<footer id="footer">
+
 <section id="wrapper">
   <ul>
     <li><a href="/feed.xml">RSS</a></li>
     <li><a href="/feed.json">JSON Feed</a></li>
-    <li><a href="https://micro.blog/{{ site.microblog_user }}" rel="me">Micro.blog</a></li>
-<!--     <li><a class="u-email" href="mailto:{{ site.email }}" rel="me">Email</a></li> -->
+    <li><a href="https://micro.blog/{{ .Site.Author.username }}" rel="me">Micro.blog</a></li>
+<!--     <li><a class="u-email" href="mailto:" rel="me">Email</a></li> -->
   </ul>
   <form method="get" id="search" action="https://duckduckgo.com/">
-    <input type="hidden" name="sites" value="{{ site.url }}"/>
+    <input type="hidden" name="sites" value="{{ "/" | absURL }}"/>
     <input type="hidden" name="k8" value="#444444"/>
     <input type="hidden" name="k9" value="#ee4792"/>
     <input type="hidden" name="kt" value="h"/>
@@ -14,3 +16,5 @@
     <input type="submit" value="Search" style="display: none;" />
   </form>
 </section>
+
+</footer>
