Updated date format for Microformats, fixed nav class.

--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -5,7 +5,7 @@
 
 	{{ range .Site.Menus.main }}
 		{{ if .Page.Params.redirect_url }}
-			<a class="page-link" href="{{ .Page.Params.redirect_url }}">{{ .Name }}</a>
+			<a href="{{ .Page.Params.redirect_url }}">{{ .Name }}</a>
 		{{ else }}
 			<a href="{{ .URL | relLangURL | safeURL }}">{{ .Name }}</a>
 		{{ end }}
