--- a/layouts/partials/post-list.html
+++ b/layouts/partials/post-list.html
@@ -19,7 +19,7 @@
       {{ end }}
       <a href="{{ .Permalink }}" class="u-url">
         <aside class="dates">
-          <time datetime="{{ .Date }}" class="dt-published">→ {{ .Date.Format "3:04 AM, JAN 2" }}</time>
+          <time datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}" class="dt-published">→ {{ .Date.Format "3:04 AM, JAN 2" }}</time>
         </aside>
       </a>
     </article>
