--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -5,7 +5,7 @@
     <h1 class="p-name">{{ . }}</h1>
     {{ end }}
     <h2 class="headline">
-      <time class="dt-published" datetime="{{ .Date }}">
+      <time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}">
         <a class="u-url dates" href="{{ .Permalink }}">{{ .Date.Format "Jan 2, 2006" }}</a>
       </time>
     </h2>
