--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -2,7 +2,7 @@
   <section id="wrapper">
     <header class="h-card">
       <a class="u-url" href="/about/">
-        <img id="avatar" src="{{ .Site.Author.avatar }}"/>
+        <img id="avatar" class="u-photo" src="{{ .Site.Author.avatar }}" width="96" height="96" />
       </a>
       <h1 class="p-name" rel="me">{{ .Site.Author.name }}</h1>
       <h4 class="p-role">{{ .Site.Params.description | safeHTML }}</h4>
