--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -16,7 +16,7 @@
 </article>
 <section id="post-meta" class="clearfix">
   <a href="/">
-    <img class="u-photo avatar" src="{{ .Site.Author.avatar }}">
+    <img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96">
     <div>
       <span class="p-author h-card dark">{{ .Site.Author.name }}</span>
       <span><a href="https://micro.blog/{{ .Site.Author.username }}">@{{ .Site.Author.username }}</a></span>
