--- a/layouts/partials/post-list.html
+++ b/layouts/partials/post-list.html
@@ -1,25 +1,25 @@
 <ul id="post-list">
 
-{{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") (index .Site.Params "archive-paginate" | default 10) }}
+{{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") (index .Site.Params "archive-paginate" | default 25) }}
 {{ range $paginator.Pages  }}
 
   <li>
     <article>
       {{ if .Title }}
       <section class="post-body">
-        {{ .Content }}
-      </section>
-      {{ else }}
       <header>
         <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
       </header>
       <section class="post-body">
         {{ .Content }}
       </section>
+      </section>
+      {{ else }}
+        {{ .Content }}
       {{ end }}
       <a href="{{ .Permalink }}" class="u-url">
         <aside class="dates">
-          <time datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}" class="dt-published">→ {{ .Date.Format "3:04 AM, JAN 2" }}</time>
+          <time datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}" class="dt-published">→ {{ .Date.Format "3:04 PM, Jan 2" }}</time>
         </aside>
       </a>
     </article>
