Updated with recent in-progress pagination changes, CSS.

--- a/layouts/partials/post-list.html
+++ b/layouts/partials/post-list.html
@@ -1,31 +1,20 @@
 <ul id="post-list">
 
-{{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") (index .Site.Params "archive-paginate" | default 25) }}
-{{ range $paginator.Pages  }}
-
-  <li>
-    <article>
-      {{ if .Title }}
-      <section class="post-body">
-      <header>
-        <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-      </header>
-      <section class="post-body">
-        {{ .Content }}
-      </section>
-      </section>
-      {{ else }}
-        {{ .Content }}
-      {{ end }}
-      <a href="{{ .Permalink }}" class="u-url">
-        <aside class="dates">
-          <time datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}" class="dt-published">→ {{ .Date.Format "3:04 PM, Jan 2" }}</time>
-        </aside>
-      </a>
-    </article>
-  </li>
-  <span class="separator"><span class="divider"></span></span>
-
+{{ if or .Params.enable_pagination .IsHome }}
+	{{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") }}
+	{{ $list := $paginator.Pages }}
+	{{ range $list  }}
+		{{ partial "post-item.html" . }}
+	{{ end }}
+{{ else }}
+	{{ $list := where .Data.Pages.ByDate.Reverse "Type" "post" }}
+	{{ range $list  }}
+		{{ partial "post-item.html" . }}
+	{{ end }}
 {{ end }}
 
 </ul>
+
+{{ if .Params.enable_pagination }}
+	{{ partial "pagination" . }}
+{{ end }}
