--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,8 +2,8 @@
 
 <section id="wrapper">
   <ul>
-    <li><a href="/feed.xml">RSS</a></li>
-    <li><a href="/feed.json">JSON Feed</a></li>
+    <li><a href="/feed.xml" rel="alternate">RSS</a></li>
+    <li><a href="/feed.json" rel="alternate">JSON Feed</a></li>
     <li><a href="https://micro.blog/{{ .Site.Author.username }}" rel="me">Micro.blog</a></li>
 <!--     <li><a class="u-email" href="mailto:" rel="me">Email</a></li> -->
   </ul>
