--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -14,6 +14,11 @@
       {{ .Content }}
   </section>
 </article>
+
+{{ if .Site.Params.include_conversation }}
+<script type="text/javascript" src="https://micro.blog/conversation.js?url={{ .Permalink }}"></script>
+{{ end }}
+
 <section id="post-meta" class="clearfix">
   <a href="/">
     <img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96">
