Copied in teams author support.

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -20,12 +20,24 @@
 
   <section id="post-meta" class="clearfix p-author h-card">
     <a href="/" class="u-url">
-      <img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96">
-      <div>
-        <span class="p-name dark">{{ .Site.Author.name }}</span>
-        <span><a href="https://micro.blog/{{ .Site.Author.username }}">@{{ .Site.Author.username }}</a></span>
-      </div>
+  	{{ if .Params.author }}
+		<img class="u-photo avatar" src="{{ .Params.author.avatar }}" width="96" height="96">
+		<div>
+		  <span class="p-name dark">{{ .Params.author.name }}</span>
+		  <span><a href="https://micro.blog/{{ .Params.author.username }}">@{{ .Params.author.username }}</a></span>
+		</div>
+  	{{ else }}
+		<img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96">
+		<div>
+		  <span class="p-name dark">{{ .Site.Author.name }}</span>
+		  <span><a href="https://micro.blog/{{ .Site.Author.username }}">@{{ .Site.Author.username }}</a></span>
+		</div>
+	{{ end }}
     </a>
   </section>
 </article>
 {{ end }}
+
+
+
+
