Updated with latest version for plug-ins.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -42,4 +42,10 @@
 	<link rel="microsub" href="https://micro.blog/microsub" />
 	<link rel="webmention" href="https://micro.blog/webmention" />
 	<link rel="subscribe" href="https://micro.blog/users/follow" />
+    {{ range .Site.Params.plugins_css }}
+	    <link rel="stylesheet" href="{{ . }}" />
+    {{ end }}
+    {{ range $filename := .Site.Params.plugins_html }}
+    	{{ partial $filename $ }}
+    {{ end }}
 </head>
