--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,5 +8,8 @@
   </section>
   {{ partial "footer.html" . }}
   {{ partial "custom_footer.html" . }}
+		{{ range .Site.Params.plugins_js }}
+			<script src="{{ . }}"></script>
+		{{ end }}
 </body>
 </html>
