Adds a title to the individual category page.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,3 +1,10 @@
 {{ define "main" }}
+  {{ if ne .IsHome true }}
+  <section id="wrapper">
+    <header>
+      <h1>{{- if .Title }}{{ .Title }}{{- end -}}</h1>
+    </header>
+  </section>
+  {{ end }}
   {{ partial "post-list.html" . }}
 {{ end }}
