--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -555,3 +555,30 @@ article #post-list li {
 	list-style-type: disc;
 }
  */
+
+.microblog_conversation {
+  margin-top: 50px;
+  padding-top: 20px;
+  border-top: 1px solid lightgray;
+}
+
+.microblog_post {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.microblog_avatar {
+  border-radius: 10px;
+  vertical-align: top;
+}
+
+.microblog_time {
+  font-size: 13px;
+  padding-top: 10px;
+  color: gray;
+}
+
+.microblog_time a {
+  color: gray;
+  text-decoration: none;
+}
