Update font size and contrast
I have excellent vision. But I'm old. And so bumping the contrast and font size would help just about everyone, including me. :)

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -23,8 +23,8 @@ html, body {
 }
 
 body {
-	font: 17px "Avenir Next", Avenir, "-apple-system", Helvetica, Arial, sans-serif;
-	color: #666;
+	font: 20px "Avenir Next", Avenir, "-apple-system", Helvetica, Arial, sans-serif;
+	color: #0c0;
 	text-rendering: optimizeLegibility;
 }
 
