Fixed title tag to not include site name again.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,7 +7,7 @@
   <title>
       {{- block "title" . -}}
 		{{- .Site.Title -}}
-		{{- if .Title }}
+		{{- if and .Title (ne .Title .Site.Title) }}
 		- {{ .Title }}
 		{{- end -}}
       {{- end -}}
